[package]
name = "mud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.32"
serde = { version = "1.0.151", features = ["derive"] }
serde_yaml = "0.9.16"
libc = "0.2.139"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
